--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/kata_crud_db?serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = password
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
